--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
 
     <div id="welcome">
-        <h3>Welcome to Blob Catcher</h3>
+        <h3>Welcome to Blob Dodger</h3>
     </div>
 
     <div id="canvas-wrapper"></div>
