--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="canvas-wrapper"></div>
 
     <div id="scoreCounter">
-        <h3><span id="blobScore"></span> / <span id="maxBlobs"></span> blobs caught</h3>
+        <h3><span id="blobScore"></span> / <span id="maxBlobs"></span> blobs dodged</h3>
     </div>
     
     <h2 id="alert"></h2>
